--- a/app/src/main/res/drawable/activity_background_profile.xml
+++ b/app/src/main/res/drawable/activity_background_profile.xml
@@ -4,11 +4,9 @@
 
     <!--    <solid android:color="#9999FF"/>-->
     <gradient android:startColor="#E30613"
-        android:endColor="#FF87A0"
-        android:angle=""/>
+        android:endColor="#FF87A0"/>
 
     android:shape="rectangle" >
-    <corners android:radius="10dp"/>
 
 
 </shape>
