--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,157 +7,175 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-
     <LinearLayout
         android:id="@+id/linear_top"
         android:layout_width="match_parent"
-        android:layout_height="125dp"
+        android:layout_height="wrap_content"
         android:background="@color/main_red"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="8dp"
+        android:paddingStart="16dp">
 
         <TextView
             android:id="@+id/text_view_health"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HEALTH\nCALC"
             android:layout_gravity="center"
-            android:fontFamily="serif"
-            android:textStyle="bold"
-            android:gravity="right"
+            android:layout_weight="3"
+            android:fontFamily="@font/aclonica"
+            android:gravity="start"
+            android:text="HEALTH\nCALC"
+            android:textColor="@color/white"
             android:textSize="25sp"
-            android:layout_weight="1"
-            android:textColor="@color/white" />
+            android:textStyle="bold"
+            android:typeface="normal" />
 
         <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_weight="2"
-            android:layout_gravity="center"
-            android:src="@drawable/kcal" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_weight="1"
+            android:src="@drawable/bmi" />
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/img_wave_up"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:background="@drawable/ic_wave_top"
         android:layout_below="@id/linear_top"/>
 
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="225dp"
-        android:gravity="left"
-        android:fontFamily="sans-serif-black"
-        android:textColor="@color/black"
-        android:textSize="25sp"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/img_wave_up"
+        android:layout_above="@id/img_wave_down"
+        android:orientation="vertical"
+        android:padding="32dp">
 
-    <TextView
-        android:id="@+id/text_view_login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Faça login para continuar"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="265dp"
-        android:gravity="left"
-        android:fontFamily="sans-serif"
-        android:textColor="@color/black"
-        android:textSize="15sp"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
-        android:paddingRight="25dp"
-        android:layout_below="@+id/text_view_login"
-        android:hint="E-mail">
-
-        <EditText
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/activity_retangulo_login"
-            android:drawableStart="@drawable/ic_baseline_email_24"
-            android:drawablePadding="15dp"
+            android:text="Login"
+            android:layout_marginLeft="25dp"
+            android:gravity="left"
+            android:fontFamily="sans-serif-black"
+            android:textColor="@color/black"
+            android:textSize="25sp"/>
+
+        <TextView
+            android:id="@+id/text_view_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Faça login para continuar"
+            android:layout_marginLeft="25dp"
+            android:gravity="left"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/black"
+            android:textSize="15sp"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/input_layout_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_below="@+id/text_view_login"
+            android:hint="E-mail">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_baseline_email_24"
+                android:drawablePadding="15dp"
+                android:layout_marginTop="10dp"
+                android:maxLines="1"
+                android:padding="15dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:id="@+id/input_layout_senha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:maxLines="1"
-            android:padding="15dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_below="@+id/input_layout_email"
+            android:hint="Senha">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/input_layout_senha"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:paddingRight="25dp"
-        android:layout_below="@+id/input_layout_email"
-        android:hint="Senha">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_baseline_lock_24"
+                android:drawablePadding="15dp"
+                android:maxLines="1"
+                android:padding="15dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
+        <Button
+            android:id="@+id/button_entrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/activity_retangulo_login"
-            android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:drawablePadding="15dp"
-            android:maxLines="1"
-            android:padding="15dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_below="@+id/input_layout_senha"
+            android:background="@drawable/activity_entrar"
+            android:layout_marginTop="16dp"
+            android:padding="8dp"
+            android:text="ENTRAR"
+            android:textColor="@color/white"/>
 
-    <Button
-        android:id="@+id/button_entrar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/input_layout_senha"
-        android:background="@drawable/activity_entrar"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="25dp"
-        android:layout_marginLeft="25dp"
-        android:padding="15dp"
-        android:text="ENTRAR"
-        android:textColor="@color/white"/>
+        <CheckBox
+            android:id="@+id/checkbox_lembrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lembrar-me"
+            android:layout_below="@+id/button_entrar"
+            android:layout_marginTop="10dp"
+            android:layout_alignRight="@+id/button_entrar"
+            android:layout_gravity="end"/>
 
-    <CheckBox
-        android:id="@+id/checkbox_lembrar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lembra-me"
-        android:layout_below="@+id/button_entrar"
-        android:layout_marginTop="10dp"
-        android:layout_alignRight="@+id/button_entrar"/>
+        <TextView
+            android:id="@+id/text_view_esqueci"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/checkbox_lembrar"
+            android:text="Esqueci a senha"
+            android:layout_alignRight="@id/checkbox_lembrar"
+            android:textColor="@color/blue"
+            android:textSize="15sp"
+            android:layout_gravity="end"/>
 
-    <TextView
-        android:id="@+id/text_view_esqueci"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/checkbox_lembrar"
-        android:text="Esqueci a senha"
-        android:layout_alignRight="@id/checkbox_lembrar"
-        android:textColor="@color/blue"
-        android:textSize="15sp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_esqueci"
-        android:layout_alignRight="@id/text_view_esqueci"
-        android:text="Não tem uma conta?"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="145dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="end">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/text_view_esqueci"
-        android:layout_alignRight="@id/text_view_esqueci"
-        android:layout_marginTop="10dp"
-        android:text="Criar uma conta agora"
-        android:textColor="@color/blue"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_esqueci"
+                android:layout_alignRight="@id/text_view_esqueci"
+                android:text="Não tem uma conta?"
+                android:layout_marginTop="10dp"/>
+
+            <TextView
+                android:id="@+id/tv_nova_conta"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_esqueci"
+                android:layout_alignRight="@id/text_view_esqueci"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="8dp"
+                android:text="Criar uma conta agora"
+                android:textColor="@color/blue"/>
+        </LinearLayout>
+
+    </LinearLayout>
+
 
     <ImageView
+        android:id="@+id/img_wave_down"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:background="@drawable/ic_wave_botton"
         android:layout_alignParentBottom="true"/>
 
