--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NovoUsuarioActivity"
+    tools:context=".ui.NovoUsuarioActivity"
     android:orientation="vertical">
 
     <LinearLayout
@@ -171,12 +171,14 @@
                 android:layout_marginTop="10dp">
 
                 <RadioButton
+                    android:id="@+id/radio_feminino"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Feminino" />
 
                 <RadioButton
+                    android:id="@+id/radio_masculino"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
