--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -23,14 +23,16 @@
             android:layout_marginTop="16dp">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/iv_foto_perfil"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/foto_perfil"
                 android:scaleType="centerCrop"/>
 
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/tv_trocar_foto"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
