--- a/app/src/main/res/layout/activity_novo_usuario.xml
+++ b/app/src/main/res/layout/activity_novo_usuario.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/iv_foto_perfil"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/foto_perfil"
+                android:src="@drawable/perfil"
                 android:scaleType="centerCrop"/>
 
         </androidx.cardview.widget.CardView>
@@ -83,6 +83,7 @@
 
                 <EditText
                     android:id="@+id/edit_senha"
+                    android:inputType="textPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
@@ -162,9 +163,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sexo"
-                android:textSize="15sp"
+                android:textSize="17sp"
                 android:fontFamily="sans-serif-black"
-                android:textColor="@color/main_red"
+                android:layout_marginTop="15dp"
                 android:letterSpacing="0.05"/>
 
             <LinearLayout
