--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -199,13 +199,15 @@
             android:gravity="center_vertical">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cv_pesar"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 app:cardCornerRadius="10dp"
                 android:layout_marginBottom="8dp">
 
                 <RelativeLayout
-                    android:layout_width="wrap_content"
+                    android:id="@+id/rl_pesar"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <ImageView
@@ -226,6 +228,7 @@
                         android:gravity="center_vertical">
 
                         <TextView
+                            android:id="@+id/tv_pesar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Pesar Agora"
