--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -74,7 +74,7 @@
                         android:id="@+id/tv_imc"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="25.7"
+                        android:text="-"
                         android:textSize="17.5sp"
                         android:textStyle="bold"
                         android:textColor="@color/white"/>
@@ -98,7 +98,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1980"
+                        android:text="-"
                         android:textSize="17.5sp"
                         android:textStyle="bold"
                         android:textColor="@color/white"/>
@@ -148,7 +148,7 @@
                         android:id="@+id/tv_peso"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="67"
+                        android:text="-"
                         android:textSize="17.5sp"
                         android:textStyle="bold"
                         android:textColor="@color/white"/>
